logs/deepmodels.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/deepmodels'...
Listing './lib/python3.5/site-packages/deepmodels/shared'...
Compiling './lib/python3.5/site-packages/deepmodels/shared/data_manager.py'...
***   File "./lib/python3.5/site-packages/deepmodels/shared/data_manager.py", line 224
    print "set {} formed.".format(idx)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepmodels/shared/search_tools.py'...
***   File "./lib/python3.5/site-packages/deepmodels/shared/search_tools.py", line 41
    print "start matching..."
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deepmodels/tf'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/core/base_model.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/base_model.py", line 30
    print "no variable in current graph."
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/core/data_provider.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/data_provider.py", line 81
    print img_fns
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deepmodels/tf/core/dm_models'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/core/dm_models/common.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/dm_models/common.py", line 57
    print "using {} graph".format(self.net_params.model_name)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deepmodels/tf/core/learners'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/core/learners/dm_classifier.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/learners/dm_classifier.py", line 37
    print "train/pred_cls_shape is: {}".format(tf.shape(pred_cls))
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepmodels/tf/core/learners/dm_learner.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/learners/dm_learner.py", line 44
    print "class session created."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deepmodels/tf/core/models'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/models/slim'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/models/slim/datasets'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/models/slim/deployment'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/models/slim/nets'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/models/slim/preprocessing'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/models/slim/scripts'...
Listing './lib/python3.5/site-packages/deepmodels/tf/core/tests'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/core/tests/test_data.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/tests/test_data.py", line 54
    print "batch {}:".format(i)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepmodels/tf/core/tests/test_dm_model.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/tests/test_dm_model.py", line 25
    print incep4.net_weight_fn
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/core/tests/test_model.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/core/tests/test_model.py", line 66
    print "best label: {}, score: {}".format(np.argmax(preds), np.max(preds))
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deepmodels/tf/data'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/data/cifar_data.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/data/cifar_data.py", line 43
    print "downloading cifar10 data, this may take some time..."
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/data/img_folder_data.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/data/img_folder_data.py", line 116
    print "loaded data. sample number: {}; class number: {}".format(samp_num,
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deepmodels/tf/data/mnist_data.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/data/mnist_data.py", line 40
    print "downloading mnist data, this may take some time..."
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/meta_tester.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/meta_tester.py", line 18
    print "running test file: {}".format(test_fn)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deepmodels/tf/models'...
Listing './lib/python3.5/site-packages/deepmodels/tf/models/inception'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/models/net_downloader_tf.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/models/net_downloader_tf.py", line 37
    print "network model directory: {}".format(net_dir)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deepmodels/tf/samples'...
Compiling './lib/python3.5/site-packages/deepmodels/tf/samples/img_classifier.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/samples/img_classifier.py", line 199
    print "extracting features..."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/samples/img_classifier2.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/samples/img_classifier2.py", line 71
    print "aux loss included."
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/samples/img_predict.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/samples/img_predict.py", line 60
    print "start prediction..."
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deepmodels/tf/samples/tfrecord_io.py'...
***   File "./lib/python3.5/site-packages/deepmodels/tf/samples/tfrecord_io.py", line 53
    print 'Reading images:'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deepmodels-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
